--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body {
 .gallery img:hover {
   transform: scale(1.1);
 }
-
+Songs of Solomon 4 verse 11 "Your lips drop sweetness as the honeycomb, my bride; milk and honey are under your tongue. The fragrance of your garments is like the fragrance of lebanon" 
 /* BUTTONS */
 button {
   padding: 14px 30px;
@@ -150,7 +150,7 @@ button {
 <!-- SLIDE 1 -->
 <div class="slide active">
   <h1>Will you be my Valentine? 💕</h1>
-  <img src="her.jpeg" class="photo">
+  <img src="her.jpg" class="photo">
 
   <div>
     <button id="yesBtn">Yes 😍</button>
@@ -164,18 +164,18 @@ button {
 <div class="slide">
   <h2>Our Beautiful Memories 💞</h2>
   <div class="gallery">
-    <img src="us1.jpeg">
-    <img src="us2.jpeg">
-    <img src="us3.jpeg">
-    <img src="us4.jpeg">
+    <img src="us1.jpg">
+    <img src="us2.jpg">
+    <img src="us3.jpg">
+    <img src="us4.jpg">
   </div>
   <button id="nextSlide" class="romantic-btn">Relive Our Love 💞</button>
 </div>
 
 <!-- SLIDE 3 -->
 <div class="slide">
-  <h1>💖 I LOVE YOU BUBU 💖</h1>
-  <h2>#Always & Forever 💍</h2>
+  <h1>💖 I LOVE YOU BABY 💖</h1>
+  <h2>#COURTSHIP 💍</h2>
 
   <!-- BIG BOUQUET OF ROSES -->
   <div class="bouquet">
@@ -190,7 +190,7 @@ button {
 
 <!-- MUSIC -->
 <audio id="music" loop preload="auto">
-  <source src="wait for you.mp3" type="audio/mpeg">
+  <source src="Power Trip.mp3" type="audio/mpeg">
 </audio>
 
 <script>
@@ -210,7 +210,7 @@ const messages = [
   "Okay… last chance 😭"
 ];
 
-const text = "You make my world softer, warmer, and brighter every day 🌹";
+const text = "You make me want to learn new things, you make me want to explore the world ";
 let noCount = 0;
 
 /* MUSIC FADE IN */
@@ -274,3 +274,4 @@ function createLove() {
 
 </body>
 </html>
+
