--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@ button {
 <div class="slide">
   <h2>Our Beautiful Memories 💞</h2>
   <div class="gallery">
-    <img src="us1.jpg">
-    <img src="us2.jpg">
-    <img src="us3.jpg">
-    <img src="us4.jpg">
+    <img src="Us1.jpg">
+    <img src="Us2.jpg">
+    <img src="Us3.jpg">
+    <img src="Us4.jpg">
   </div>
   <button id="nextSlide" class="romantic-btn">Relive Our Love 💞</button>
 </div>
@@ -274,4 +274,5 @@ function createLove() {
 
 </body>
 </html>
+
 
