--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ button {
 </div>
 
 <audio id="music" loop preload="auto">
-  <source src="power-trip.mp3" type="audio/mpeg">
+  <source src="love-song.mp3" type="audio/mpeg">
 </audio>
 
 <script>
@@ -295,3 +295,4 @@ function createLove() {
 
 </body>
 </html>
+
